--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Simple Liker</title>
   </head>
   <body>
-    <div id="modal">
+    <div id="modal" class="hidden">
       <h2>Error!</h2>
       <p id="modal-message"></p>
     </div>
@@ -23,7 +23,11 @@
       <p>Practice your JavaScript!</p>
       <footer>
         <ul>
-          <li class="like">Like! <span class="like-glyph">&#x2661;</span></li>
+          <li class="like">Like!
+            <span class="like-glyph">&#x2661;</span>
+            <a id="art1">0</a>
+          </li> 
+          
         </ul>
       </footer>
     </article>
@@ -34,7 +38,9 @@
       <p>Practice your Ruby!</p>
       <footer>
         <ul>
-          <li class="like">Like! <span class="like-glyph">&#x2661;</span></li>
+          <li class="like">Like! <span class="like-glyph">&#x2661;</span>
+          <a id="art2">0</a>
+          </li>
         </ul>
       </footer>
     </article>
@@ -45,7 +51,9 @@
       <p>Practice your Python!</p>
       <footer>
         <ul>
-          <li class="like">Like! <span class="like-glyph">&#x2661;</span></li>
+          <li class="like">Like! <span class="like-glyph">&#x2661;</span>
+          <a id="art3">0</a>
+          </li>
         </ul>
       </footer>
     </article>
@@ -56,7 +64,9 @@
       <p>Practice your Java!</p>
       <footer>
         <ul>
-          <li class="like">Like! <span class="like-glyph">&#x2661;</span></li>
+          <li class="like">Like! <span class="like-glyph">&#x2661;</span>
+          <a id="art4">0</a>
+          </li>
         </ul>
       </footer>
     </article>
@@ -67,7 +77,9 @@
       <p>Practice your Elixr!</p>
       <footer>
         <ul>
-          <li class="like">Like! <span class="like-glyph">&#x2661;</span></li>
+          <li class="like">Like! <span class="like-glyph">&#x2661;</span>
+          <a id="art5">0</a>
+          </li>
         </ul>
       </footer>
     </article>
